# metamask-mock-rpc

./: .gitignore  Cargo.toml
src/: account.rs  block.rs  consts.rs  handler.rs  listener.rs  logging.rs  main.rs  raw_transaction.rs  request.rs  response.rs  signer.rs  transaction.rs
src/methods/: eth_block_number.rs  eth_call.rs  eth_chain_id.rs  eth_estimate_gas.rs  eth_gas_price.rs  eth_get_balance.rs  eth_get_block_by_hash.rs  eth_get_block_by_number.rs  eth_get_transaction_count.rs  eth_protocol_version.rs  eth_send_raw_transaction.rs  mod.rs  net_version.rs  web3.rs
src/utils/: fileutil.rs  mod.rs  timeutil.rs
web3-signer/: Cargo.toml
web3-signer/src/: error.rs  lib.rs  signing.rs
